--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "1.0.0",
   "dependencies": {
-    "cookie-parser": "1.3.2",
-    "express": "~4.16.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "express": "~4.16.0",
+    "mongoose": "^5.3.10",
     "querystring": "~0.2.0",
     "request": "~2.83.0"
   },
