--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.4",
     "cryptiles": "^4.1.3",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "mocha": "^5.2.0",
     "mongoose": "^5.3.10",
     "querystring": "~0.2.0",
