--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A music exploration application using Spotify and Azure Face API",
   "version": "1.0.0",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
