more front end setup

--- a/package.json
+++ b/package.json
@@ -16,20 +16,33 @@
     "querystring": "~0.2.0",
     "request": "~2.83.0"
   },
-  "main": "app.js",
+  "main": "src/index.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "set NODE_ENV=test&&mocha",
+    "start": "set NODE_ENV=production&&node src/index.js",
+    "dev-start": "webpack --mode production && set NODE_ENV=dev&&nodemon src/index.js",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jinghul/411-project.git"
+    "url": "git+https://github.com/jinghul/FindTune.git"
   },
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jinghul/411-project/issues"
+    "url": "https://github.com/jinghul/FindTune/issues"
   },
-  "homepage": "https://github.com/jinghul/411-project#readme"
+  "homepage": "https://github.com/jinghul/FindTune#readme",
+  "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
+  }
 }
