--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mocha": "^5.2.0",
     "mongoose": "^5.3.10",
     "querystring": "~0.2.0",
+    "react-bootstrap": "^0.32.4",
     "request": "~2.83.0"
   },
   "main": "src/index.js",
@@ -40,8 +41,12 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2"
   }
