--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cryptiles": "^4.1.3",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "helmet": "^3.15.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.3.10",
     "querystring": "~0.2.0",
@@ -25,7 +26,8 @@
     "test": "set NODE_ENV=test&&mocha",
     "start": "set NODE_ENV=production&&node src/index.js",
     "dev-start": "webpack --mode production && set NODE_ENV=dev&&nodemon src/index.js",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "webpack-start": "webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
@@ -38,16 +40,30 @@
   "homepage": "https://github.com/jinghul/FindTune#readme",
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "acorn": "^6.0.4",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-hot-loader": "^4.3.12",
     "style-loader": "^0.23.1",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2"
+    "url-loader": "^1.1.2",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
