--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.3.10",
     "querystring": "~0.2.0",
     "react-bootstrap": "^0.32.4",
+    "react-spinners": "^0.4.7",
     "request": "~2.83.0"
   },
   "main": "src/index.js",
@@ -46,6 +47,7 @@
     "acorn": "^6.0.4",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "babel-plugin-emotion": "^10.0.4",
     "css-loader": "^1.0.1",
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
